--- a/shop_frontend/src/CSS_C/ProductHomeCSS_C.css
+++ b/shop_frontend/src/CSS_C/ProductHomeCSS_C.css
@@ -76,3 +76,27 @@
     background-color: #0d47a1; /* Darker shade of blue */
   }
   
+
+
+  .container_p {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    align-items: center;
+    height: 80%; /* Adjust as needed */
+    background-color: #e0f2fe; /* Background color */
+  }
+
+  .image-container_p {
+    border: 2px solid blue; /* Border */
+    border-radius: 10px; /* Rounded corners */
+    padding: 10px;
+    background-color: white; /* Inner background color */
+  }
+
+  .image-container_p img {
+    max-width: 100%;
+    height: 80%;
+    display: block;
+    margin: 0 auto; /* Center image */
+  }
