--- a/shop_frontend/src/CSS_C/ProductItemCSS_C.css
+++ b/shop_frontend/src/CSS_C/ProductItemCSS_C.css
@@ -17,7 +17,7 @@
   
   .image-container {
     width: 100%;
-    height: auto;
+    height: 200px;
     background-color: #f0f0f0;
     border-radius: 0.5rem;
     overflow: hidden;
