--- a/shop_frontend/src/AdminStyle_D.css
+++ b/shop_frontend/src/AdminStyle_D.css
@@ -7,6 +7,15 @@
     border: 1px solid #ccc;
   }
   
+  .Allpapertop {
+    margin-top: 60px;
+    margin-bottom: 30px;
+    text-align: center;
+    color: #333;
+    font-size: 30px;
+    font-weight: bold;
+  }
+  
   .mainTopic {
     text-align: center;
     color: #333;
@@ -60,6 +69,7 @@
     cursor: pointer;
     font-size: 13px;
     margin-top: 30px;
+    margin-bottom: 60px;
     margin-left: 190px;
   }
   
