--- a/shop_frontend/src/AdminStyle_D.css
+++ b/shop_frontend/src/AdminStyle_D.css
@@ -12,13 +12,18 @@
     margin-bottom: 30px;
     text-align: center;
     color: #333;
-    font-size: 30px;
+    font-size: 35px;
     font-weight: bold;
+    font-family: 'Bahnschrift';
   }
-  
+
   .mainTopic {
     text-align: center;
     color: #333;
+    font-size: 25px;
+    margin-bottom: 10px;
+    font-weight: bold;
+    font-family: 'Bahnschrift'
   }
   
   .subtopics {
@@ -33,7 +38,7 @@
     box-sizing: border-box;
   }
   
-  .btn {
+  .btn1 {
     background-color: #007bff;
     color: #fff;
     padding: 10px;
@@ -42,7 +47,7 @@
     font-size: 16px;
   }
   
-  .btn:hover {
+  .btn1:hover {
     background-color: #0056b3;
   }
 
