sayumi Components,PDF, search

--- a/shop_frontend/src/components_D/PrintDocStyles_D.css
+++ b/shop_frontend/src/components_D/PrintDocStyles_D.css
@@ -88,7 +88,18 @@
     margin-bottom: 16px;
     box-sizing: border-box;
   }
-  
+
+  .boxoutlines_D {
+    width: 90%;
+    padding: 8px;
+    margin-bottom: 16px;
+    margin-top: 16px;
+    margin-left: 60px;
+    box-sizing: border-box;
+    border: 1px solid #000000; /* Add a border */
+    color: #333; /* Change text color */
+  }
+
   label {
     display: flex;
     align-items: center;
