--- a/shop_frontend/src/CSS_C/ProductItemCSS_C.css
+++ b/shop_frontend/src/CSS_C/ProductItemCSS_C.css
@@ -1,122 +1,143 @@
 .product-container {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    gap: 1rem;
-    background-color: white;
-    border-radius: 0.5rem;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border: 1px solid #ccc;
-    transition: border-color 0.3s, background-color 0.3s;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  gap: 1rem;
+  background-color: white;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ccc;
+  transition: border-color 0.3s, background-color 0.3s;
+  width: 20vh;
+  height: 40vh;
+}
+
+@media screen and (min-width: 768px) {
+  .product-container {
+      width: 35vh;
+      height: 55vh;
   }
-  
-  .product-container:hover {
-    border-color: #0053b3;
-    background-color: #e0e0e0;
-  }
-  
+}
+
+.product-container:hover {
+  border-color: #0053b3;
+  background-color: #e0e0e0;
+}
+
+.image-container {
+  width: 100%;
+  height: 12vh;
+  background-color: #f0f0f0;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
+@media screen and (min-width: 768px) {
   .image-container {
-    width: 100%;
-    height: 200px;
-    background-color: #f0f0f0;
-    border-radius: 0.5rem;
-    overflow: hidden;
-    margin-bottom: 0.5rem;
+      width: 32vh;
+      height: 22vh;
+      margin-bottom: 0.5rem;
   }
-  
-  .image-container img {
-    width: 100%;
-    height: auto;
-    display: block;
-  }
-  
-  @media (min-width: 640px) {
-    .image-container {
-      max-width: 200px;
-      max-height: 200px;
-    }
-  }
-  
-  
-  .product-name {
-    text-align: center;
-  }
-  
-  .name-tag {
-    font-size: 1rem;
-    background-color: #0053b3;
-    color: white;
-    padding: 0.25rem 0.5rem;
-    border-radius: 0.25rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .description {
-    max-width: 12.5rem;
-    margin-bottom: 0.5rem;
-  }
-  
-  .price {
-    font-weight: bold;
-    text-align: center;
-  }
-  
-  .quantity {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .quantity-controls button {
-    padding: 0.25rem 0.5rem;
-    background-color: #f0f0f0;
-    border: none;
-    border-radius: 0.25rem;
-    cursor: pointer;
-  }
-  
-  .quantity-input {
-    width: 3rem;
-    text-align: center;
-    border: 1px solid #ccc;
-    border-radius: 0.25rem;
-  }
-  
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-name {
+  text-align: center;
+}
+
+.name-tag {
+  font-size: 1rem;
+  background-color: #0053b3;
+  color: white;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.description {
+  max-width: 12.5rem;
+}
+
+.price {
+  font-weight: bold;
+  text-align: center;
+}
+
+.quantity {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.quantity-controls {
+  display: flex;
+  align-items: center;
+}
+
+.quantity-controls button {
+  padding: 0.3rem 0.4rem;
+  background-color: #f0f0f0;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+
+.quantity-input {
+  width: 40px;
+  text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
+  margin: 0 0.3rem;
+}
+.add-to-cart {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #0053b3;
+  color: white;
+  border: 1px solid #0053b3;
+  border-radius: 0.25rem;
+  padding: 0.25rem 0.2rem;
+  cursor: pointer;
+  font-size: 10px;
+}
+
+@media screen and (min-width: 768px) {
   .add-to-cart {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #0053b3;
-    color: white;
-    border: 1px solid #0053b3;
-    border-radius: 0.25rem;
     padding: 0.25rem 0.5rem;
-    cursor: pointer;
+    font-size: 15px;
   }
-  
-  .add-to-cart:hover {
-    background-color: #004287;
-    border-color: #004287;
+}
+
+.add-to-cart:hover {
+  background-color: #004287;
+  border-color: #004287;
+}
+
+.stock-info {
+  display: flex;
+  align-items: center;
+}
+
+.stock-indicator {
+  width: 0.15rem;
+  height: 0.15rem;
+  background-color: #4caf50;
+  border-radius: 50%;
+  margin-right: 0.5rem;
+}
+
+.stock-text {
+  font-size: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .add-to-cart {
+    font-size: 16px;
   }
-  
-  .cart-icon {
-    margin-right: 0.25rem;
-  }
-  
-  .stock-info {
-    display: flex;
-    align-items: center;
-  }
-  
-  .stock-indicator {
-    width: 0.15rem;
-    height: 0.15rem;
-    background-color: #4caf50;
-    border-radius: 50%;
-    margin-right: 0.5rem;
-  }
-  
-  .stock-text {
-    font-size: 0.75rem;
-  }
-  
+}
