--- a/shop_frontend/src/CSS_C/navi.css
+++ b/shop_frontend/src/CSS_C/navi.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     margin-bottom: 20px;
+    font-size: 14px;
 }
 .nav-bar {
     width: 100%;
@@ -49,6 +50,18 @@
     cursor: pointer;
     font-size: 1.5rem;
     display: none;
+}
+
+.phone-logo img{
+    width: 100px;
+    border-radius: 50%;
+    display: none; 
+}
+
+@media (max-width: 610px) {
+    .phone-logo img {
+        display: inline-block; 
+    }
 }
 .open-menu {
     top: 50%;
