--- a/shop_frontend/src/components_D/AdminStyle_D.css
+++ b/shop_frontend/src/components_D/AdminStyle_D.css
@@ -40,12 +40,13 @@
     margin-bottom: 8px;
   }
   
-  input,
-  select {
+  /*outline bos of inputs and selects*/
+  .boxoutSeInput_D {
     width: 100%;
     padding: 8px;
     margin-bottom: 16px;
     box-sizing: border-box;
+    border: 1px solid #000000;
   }
   
   .btn1 {
