--- a/shop_frontend/src/components_D/PrintDocStyles_D.css
+++ b/shop_frontend/src/components_D/PrintDocStyles_D.css
@@ -1,185 +1,182 @@
-#form1 {
-    width: 50%;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border: 1px solid #ccc;
-  }
-  
+#formPorder {
+  width: 50%;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ccc;
+}
 
+/* User's view table */
+.userchart {
+  width: 80%;
+  margin: 50px auto;
+  padding: 50px;
+  border-collapse: collapse;
+}
 
-  /* User's view table */
-  .userchart {
-    width: 80%;
-    margin: 50px auto;
-    padding: 50px;
-    border-collapse: collapse;
-  }
+.userchart th, .userchart td {
+  border: 2px solid black;
+  padding: 8px;
+  text-align: center;
+}
 
-  .userchart th, .userchart td {
-    border: 2px solid black;
-    padding: 8px;
-    text-align: center;
-  }
+/* Admin's view table */
+.admintable {
+  width: 70%;
+  margin: 0 auto;
+  border-collapse: collapse;
+}
 
-  /* Admin's view table */
-  .admintable {
-    width: 70%;
-    margin: 0 auto;
-    border-collapse: collapse;
-  }
+.admintable th, .admintable td {
+  border: 1px solid black;
+  padding: 8px;
+  text-align: center;
+}
 
-  .admintable th, .admintable td {
-    border: 1px solid black;
-    padding: 8px;
-    text-align: center;
-  }
+/* Admin's view table */
+.allPrintingOrders {
+  width: 90%;
+  margin: 0 auto;
+  border-collapse: collapse;
+  margin-bottom: 50px;
+}
 
-  /* Admin's view table */
-  .allPrintingOrders {
-    width: 90%;
-    margin: 0 auto;
-    border-collapse: collapse;
-    margin-bottom: 50px;
-  }
+.allPrintingOrders th, .allPrintingOrders td {
+  border: 1px solid black;
+  padding: 8px;
+  text-align: center;
+}
 
-  .allPrintingOrders th, .allPrintingOrders td {
-    border: 1px solid black;
-    padding: 8px;
-    text-align: center;
-  }
+/*Print req form topic*/
+.topicMain {
+  text-align: center;
+  color: #333;
+  font-size: 25px;
+  margin-bottom: 10px;
+  font-weight: bold;
+  font-family: 'Bahnschrift'
+}
 
-  /*Print req form topic*/
-  .topicMain {
-    text-align: center;
-    color: #333;
-    font-size: 25px;
-    margin-bottom: 10px;
-    font-weight: bold;
-    font-family: 'Bahnschrift'
-  }
+/*Printing price chart topic of user view*/
+.priceChartTopic {
+  text-align: center;
+  color: #333;
+  font-size: 25px;
+  margin-bottom: 30px;
+  margin-top: 60px;
+  font-size: 35px;
+  font-weight: bold;
+  font-family: 'Bahnschrift'
+}
 
-  /*Printing price chart topic of user view*/
-  .priceChartTopic {
-    text-align: center;
-    color: #333;
-    font-size: 25px;
-    margin-bottom: 30px;
-    margin-top: 60px;
-    font-size: 35px;
-    font-weight: bold;
-    font-family: 'Bahnschrift'
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .topicSubs {
-    margin-bottom: 8px;
-  }
-  
-  .boxesforInSe_D {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 16px;
-    box-sizing: border-box;
-    border: 1px solid #000000;
-  }
+form {
+  display: flex;
+  flex-direction: column;
+}
 
-  .style4filechoosing{
-    margin-bottom: 16px;
-  }
+.topicSubs {
+  margin-bottom: 8px;
+}
 
-  .boxoutlines_D {
-    width: 90%;
-    padding: 8px;
-    margin-bottom: 16px;
-    margin-top: 16px;
-    margin-left: 60px;
-    box-sizing: border-box;
-    border: 1px solid #000000;
-    color: #333;
-  }
+.boxesforInSe_D {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 16px;
+  box-sizing: border-box;
+  border: 1px solid #000000;
+}
 
-  label {
-    display: flex;
-    align-items: center;
-    margin-bottom: 8px;
-    white-space: nowrap;
-  }
-  
-  .doubleS {
-    margin-left: 7px;
-    margin-top: 8px;
-  }
+.style4filechoosing{
+  margin-bottom: 16px;
+}
 
-  .singleS {
-    margin-left: 12px;
-    margin-top: 12px;
-  }
-  
-  /* View Chart */
-  .btnViewChart {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    margin-bottom: 20px;
-    width: 100%;
-  }
-  
-  .btnViewChart:hover {
-    background-color: #0056b3;
-  }
+.boxoutlines_D {
+  width: 90%;
+  padding: 8px;
+  margin-bottom: 16px;
+  margin-top: 16px;
+  margin-left: 60px;
+  box-sizing: border-box;
+  border: 1px solid #000000;
+  color: #333;
+}
 
-  /* Submit Button */
-  .btnSub {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  
-  .btnSub:hover {
-    background-color: #0056b3;
-  }
+label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+  white-space: nowrap;
+}
 
-  /* Place order button in long file */
-  .btnPlace {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    margin-bottom: 50px;
-    margin-left: 130px;
-  }
-  
-  .btnPlace:hover {
-    background-color: #0056b3;
-  }
+.dSide {
+  margin-left: 7px;
+  margin-top: 8px;
+}
 
-  /* PrintOrderMain file's Place Order */
-  .btnPlace2 {
-    background-color: #007bff;
-    width: 100%;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 30px;
-  }
-  
-  .btnPlace2:hover {
-    background-color: #0056b3;
-  }
-  
+.singleS {
+  margin-left: 12px;
+  margin-top: 12px;
+}
+
+/* View Chart */
+.btnViewChart {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.btnViewChart:hover {
+  background-color: #0056b3;
+}
+
+/* Submit Button */
+.btnSub {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.btnSub:hover {
+  background-color: #0056b3;
+}
+
+/* Place order button in long file */
+.btnPlace {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  margin-bottom: 50px;
+  margin-left: 130px;
+}
+
+.btnPlace:hover {
+  background-color: #0056b3;
+}
+
+/* PrintOrderMain file's Place Order */
+.btnPlace2 {
+  background-color: #007bff;
+  width: 100%;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 30px;
+}
+
+.btnPlace2:hover {
+  background-color: #0056b3;
+}
