--- a/shop_frontend/src/components_D/PrintDocStyles_D.css
+++ b/shop_frontend/src/components_D/PrintDocStyles_D.css
@@ -165,6 +165,23 @@ label {
   background-color: #0056b3;
 }
 
+/*css for loading spinner*/
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #333;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 1s linear infinite;
+  margin: auto; /* Center the spinner horizontally and vertically */
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}  
+
 /* PrintOrderMain file's Place Order */
 .btnPlace2 {
   background-color: #007bff;
