--- a/shop_frontend/src/components_D/AdminStyle_D.css
+++ b/shop_frontend/src/components_D/AdminStyle_D.css
@@ -86,7 +86,7 @@
   font-size: 13px;
   margin-top: 30px;
   margin-bottom: 60px;
-  margin-left: 255px;
+  margin-left: 29vh;
 }
 
 .btnadd:hover {
@@ -102,7 +102,7 @@
     cursor: pointer;
     font-size: 13px;
     margin-bottom: 20px;
-    margin-left: 1465px;
+    margin-left: 167vh;
   }
   
   .btngeneraterep_D:hover {
