--- a/shop_frontend/src/components_D/PrintDocStyles_D.css
+++ b/shop_frontend/src/components_D/PrintDocStyles_D.css
@@ -158,7 +158,7 @@ label {
   cursor: pointer;
   font-size: 16px;
   margin-bottom: 50px;
-  margin-left: 170px;
+  margin-left: 19vh;
 }
 
 .btnPlace:hover {
