--- a/shop_frontend/src/F_CSS/Form.css
+++ b/shop_frontend/src/F_CSS/Form.css
@@ -21,12 +21,13 @@
   }
   
   .revsubmit {
+    width: 200px;
     margin-top: 10px;
     padding: 10px;
     font-size: 16px;
     border-radius: 5px;
     border: 1px solid #ccc;
-    background-color: #007bff;
+    background-color: #005abb;
     color: white;
     cursor: pointer;
     transition: background-color 200ms;
