--- a/shop_frontend/src/F_CSS/AdminFeedback.css
+++ b/shop_frontend/src/F_CSS/AdminFeedback.css
@@ -27,7 +27,7 @@
 }
 
 .admsearch-rating button {
-  background-color: #28a745;
+  background-color: #F6BE00;
   border: none;
   color: white;
   padding: 8px 16px;
@@ -36,7 +36,7 @@
 }
 
 .admsearch-rating button:hover {
-  background-color: #218838;
+  background-color: #DBA800;
 }
 
 .admsearch-input {
