--- a/shop_frontend/src/Components_ABI/Dashboard.css
+++ b/shop_frontend/src/Components_ABI/Dashboard.css
@@ -1,13 +1,13 @@
-body {
+/* /* body {
     margin: 0;
     padding: 0;
   }
-  
-  .Dashboard {
+   */
+  /* .Dashboard {
     width: 100%;
     height: 60px;
     background-color: #2f4050;
-  }
+  } */
   
   .DashboardList {
     margin: 0;
@@ -46,5 +46,4 @@ body {
     background-color: #293846;
     border-radius: 10px; 
   }
-  
   
