--- a/shop_frontend/src/components_D/PrintDocStyles_D.css
+++ b/shop_frontend/src/components_D/PrintDocStyles_D.css
@@ -173,7 +173,7 @@ label {
   width: 20px;
   height: 20px;
   animation: spin 1s linear infinite;
-  margin: auto; /* Center the spinner horizontally and vertically */
+  margin: auto;
 }
 
 @keyframes spin {
