--- a/shop_frontend/src/components_D/PrintOrderReadStyle_D.css
+++ b/shop_frontend/src/components_D/PrintOrderReadStyle_D.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Adjust the height as needed */
+    height: 100vh;
   }
 
 /*PrintDocRead*/
