--- a/shop_frontend/src/components_D/AdminStyle_D.css
+++ b/shop_frontend/src/components_D/AdminStyle_D.css
@@ -131,3 +131,45 @@
   margin-bottom: 16px;
   box-sizing: border-box;
 }
+
+/* Banner in order display to admin */
+.banner2 {
+  background-image: linear-gradient(135deg, #8568db, #65c5de);
+  padding: 20px;
+  border-radius: 0px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  margin: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px; 
+}
+
+.slogan2 {
+  font-size: 23px;
+  text-align: center;
+  color: white;
+  margin: 5px;
+}
+
+.bold-italic2_D {
+  font-style: italic;
+  font-weight: bold;
+}
+
+/* Banner in Home of printing order manager */
+.banner1 {
+  background-image: linear-gradient(135deg, #0b5394, #64b5f6);
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  margin: 20px;
+  margin-top: 20px;
+  margin-bottom: 40px; 
+}
+
+.slogan1 {
+  font-size: 28px;
+  text-align: center;
+  color: white;
+  margin: 5px;
+  font-family: 'Apple Chancery'
+}
