--- a/shop_frontend/src/Pages_ABI/PurchaseOrder.css
+++ b/shop_frontend/src/Pages_ABI/PurchaseOrder.css
@@ -130,7 +130,7 @@ body {
   margin-left: 25px;
 }
 
-.ant-input {
+.input-row .ant-input {
   width: 400px;
   border-radius: 8px;
   border: 1px solid #000000;
