--- a/shop_frontend/src/components_D/AdminStyle_D.css
+++ b/shop_frontend/src/components_D/AdminStyle_D.css
@@ -102,7 +102,7 @@
     cursor: pointer;
     font-size: 13px;
     margin-bottom: 20px;
-    margin-left: 175vh;
+    margin-left: 178vh;
   }
   
   .btngeneraterep_D:hover {
@@ -171,5 +171,5 @@
   text-align: center;
   color: white;
   margin: 5px;
-  font-family: 'Apple Chancery'
+  font-family: 'Bauhaus 93'
 }
